# semester_project_2026

./: .gitignore  Anatomical_Poset_Builder_Instructions.docx  README.md  REPRODUCE_EXPERIMENT.md  anatomy_input_editor.py  anatomy_poset_gui.py  compute_pvalues.py  poset_autosave.json  poset_constructor_gui.py  pyproject.toml  report.md  requirements.txt  results_report.md  run.py  stand_alone_poset_anatomy.py
.cache/mpl/: fontlist-v390.json
Input_CoM_structures/: test_structures.json
Output_constructed_posets/: test_structures.poset_autosave.json  test_structures_2.poset_autosave.json
assets/: ATTRIBUTION.md
built_poset_outputs/: poset_test.json
data/: ACKNOWLEDGMENTS.md  README.md
data/Input_CoM_structures/: test_structures_2.json
data/segmentations/: bb_stats_dict_dirty.pkl  (+1 more)
results/: amos_constraint_v157.csv  amos_constraint_v157_fresh.csv  v201_constraint_v157.csv
scripts/: CoM_extractor.ipynb  README.md  algorithm1_matrix_walkthrough.py  compare_segmenters.py  compute_pvalues.py  generate_instructions_docx.py  generate_llm_poset_knowledge.py  generate_llm_poset_v157.py  llm_poset_builder.py  poset_constraint_postprocessing.py  run_medsam.py  setup_medsam.sh  setup_vibeseg.sh  stand_alone_poset_anatomy.py  truncated_fov_experiment.py  view_full_body_male.py  view_segmentation.py  visualize_cleaning.py
tests/: README.md  conftest.py  helpers.py  test_aggregation.py  test_anatomical_agent.py  test_builder.py  test_com_analysis.py  test_com_duplicate_questions.py  test_matrix_builder.py  test_merge_regression.py  test_structure_regions.py
(+785 files in other folders)
