[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anatomy_poset"
version = "0.1.0"
description = "A GUI tool for constructing anatomical partially ordered sets (posets)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.0.0",
]

[project.scripts]
anatomy-poset = "anatomy_poset.main:main"

[tool.setuptools.packages.find]
where = ["src"]